--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,13 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.wrapper {
+  display: grid;
+  grid-auto-flow: column;
+}
+.wrapper > li {
+  list-style: none;
+}
+.wrapper img {
+  height: 350px;
+}
